# ai-observe

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE  README.md  RELEASING.md  opencode.json  pyproject.toml
.codev/: config.json
.github/workflows/: ci.yml
codev/maintain/: 0001.md  0002.md
codev/plans/: 1-monitor-filesystem-modificatio.md  11-generalize-observer-for-claude.md  15-layered-observer-with-snapshot.md  20-packaging-make-ai-observe-inst.md  21-ci-test-reliability-docs-relea.md  3-stream-observe-events-in-near-.md  32-trace-parser-drops-deletions-v.md  33-codex-mount-namespace-sandbox-.md  36-meta-sidecar-labels-snapshot-o.md  38-graduate-live-agent-testing-ha.md  5-browser-visualizer-for-filesys.md  7-configurable-browser-filters-f.md  9-speed-up-browser-viewer-event-.md
codev/resources/: arch-critical.md  arch.md  lessons-critical.md  lessons-learned.md
codev/reviews/: 1-monitor-filesystem-modificatio.md  11-generalize-observer-for-claude.md  15-layered-observer-with-snapshot.md  20-packaging-make-ai-observe-inst.md  21-ci-test-reliability-docs-relea.md  3-stream-observe-events-in-near-.md  32-trace-parser-drops-deletions-v.md  33-codex-mount-namespace-sandbox-.md  36-meta-sidecar-labels-snapshot-o.md  38-graduate-live-agent-testing-ha.md  5-browser-visualizer-for-filesys.md  7-configurable-browser-filters-f.md  9-speed-up-browser-viewer-event-.md
codev/specs/: 1-monitor-filesystem-modificatio.md  11-generalize-observer-for-claude.md  15-layered-observer-with-snapshot.md  20-packaging-make-ai-observe-inst.md  21-ci-test-reliability-docs-relea.md  3-stream-observe-events-in-near-.md  32-trace-parser-drops-deletions-v.md  33-codex-mount-namespace-sandbox-.md  (+5 more)
docs/: agent-sessions.md  observe.md  viewer.md
experiments/: .gitignore  FINDINGS-round2.md  FINDINGS.md
tests/: _aggregator_oracle.py  _util.py  test_backends.py  test_codex_observe.py  test_live_trace.py  test_observe_cli.py  test_observe_env.py  test_observe_resolver.py  test_packaging_smoke.py  test_session_meta.py  test_shim_resilience.py  test_snapshot.py  test_trace_parser.py  test_viewer_aggregator.py  test_viewer_breadcrumb.py  test_viewer_index_js.py  test_viewer_server.py  test_viewer_smoke_e2e.py  test_viewer_table_js.py  test_viewer_tailer.py  test_viewer_treemap.py
(+446 files in other folders)
