[build-system]
# setuptools>=77 is required for the PEP 639 SPDX `license` expression below.
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-observe"
description = "Linux-first layered filesystem observer for wrapped command sessions, with a local browser viewer."
readme = { file = "docs/observe.md", content-type = "text/markdown" }
requires-python = ">=3.10"
authors = [{ name = "Mohid Makhdoomi", email = "mohid_h_m@hotmail.com" }]
keywords = ["strace", "filesystem", "observability", "tracing", "linux", "viewer"]
# PEP 639: SPDX expression is canonical; do NOT add the legacy
# "License :: OSI Approved :: Apache Software License" classifier.
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Monitoring",
]
# Version is single-sourced from ai_observe.__version__ (see tool.setuptools.dynamic).
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/mohidmakhdoomi/ai-observe"
Repository = "https://github.com/mohidmakhdoomi/ai-observe"

# Only non-conflicting console scripts are installed by default. The named
# shims (claude/codex/gemini/opencode) are intentionally NOT entry points —
# they would shadow real tools; they remain checkout-only bin/* shims.
[project.scripts]
ai-observe = "ai_observe.observe:main_generic"
ai-observe-viewer = "ai_observe.viewer.__main__:main"

[tool.setuptools.dynamic]
version = { attr = "ai_observe.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

# Ship the viewer's static assets as package data so the installed wheel can
# serve them from disk (the viewer reads them via Path(__file__).parent/"static").
[tool.setuptools.package-data]
"ai_observe.viewer" = ["static/*"]
